injected index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <title>Новый заголово сайта</title>
 </head>
 <body>
-<<<<<<< HEAD
 <H1>Пока</H1>
-=======
-<<<<<<< HEAD
+<H2>Выбор способа доставки</H2>
 <P> Всем понятный пример. </P>
 <P> Этот *.html-файл может быть одновременно открыт и в Notepad, и в Netscape. Сохранив изменения в Notepad, просто нажмите кнопку Reload ('перезагрузить') в Netscape, чтобы увидеть эти изменения реализованными в HTML-документе. </P>
 </body>
