--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <H1>Пока</H1>
 <H2>Выбор способа доставки</H2>
 <button>New button</button>
+<button>Cancel</button>
 <P> Всем понятный пример. </P>
 <P> Этот *.html-файл может быть одновременно открыт и в Notepad, и в Netscape. Сохранив изменения в Notepad, просто нажмите кнопку Reload ('перезагрузить') в Netscape, чтобы увидеть эти изменения реализованными в HTML-документе. </P>
 </body>
